fix: Wrap or truncate long column types (#1070)
* fix: Truncate long column types in Table sidebar view

* fix: Wrap long column types in column tab of the Table view

--- a/querybook/webapp/components/DataTableViewColumn/DataTableColumnCard.scss
+++ b/querybook/webapp/components/DataTableViewColumn/DataTableColumnCard.scss
@@ -9,10 +9,12 @@
             .DataTableColumnCard-left {
                 display: flex;
                 flex-direction: row;
-                align-items: baseline;
+                align-items: center;
+                max-width: 95%;
 
                 .column-type {
                     min-width: 80px;
+                    word-break: break-all;
                 }
             }
         }
